--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -15,14 +15,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
-
+      
     - name: Set up Go
       uses: actions/setup-go@v4
       with:
-        go-version: '1.20'
+        go-version: '1.22'
 
     - name: Build
-      run: go build -v ./...
+      run: go build -v distsys-go/...
 
     - name: Test
-      run: go test -v ./...
+      run: go test -v distsys-go/...
