--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -24,5 +24,5 @@ jobs:
     - name: Build
       run: go build -v distsys-go/...
 
-    - name: Test
-      run: go test -v distsys-go/...
+    #- name: Test
+    #  run: go test -v distsys-go/...
